--- a/package.json
+++ b/package.json
@@ -1,29 +1,23 @@
-<<<<<<< HEAD
-
-=======
->>>>>>> b42dcdbd97e20d9c4725c6be9343eef8ad9f72b8
 {
   "name": "esgbyai-landing",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-<<<<<<< HEAD
-  }
-}
-    
-=======
+    "autoprefixer": "^10.4.17",
+    "next": "^14.1.3",
+    "postcss": "^8.4.33",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.3.2"
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.3"
   }
 }
->>>>>>> b42dcdbd97e20d9c4725c6be9343eef8ad9f72b8
