--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.17",
     "next": "^14.1.3",
-    "postcss": "^8.4.33",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
+    "autoprefixer": "^10.4.21",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.1.3"
+    "eslint-config-next": "14.1.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
